// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactSupport creates a simple react project 1`] = `
{
  "author": {
    "email": "test@example.com",
    "name": "Test Example",
    "organization": true,
    "url": undefined,
  },
  "bin": undefined,
  "browserslist": [
    ">0.2%",
    "not dead",
    "not op_mini all",
  ],
  "bugs": undefined,
  "bundledDependencies": [
    "@devPackage/latest",
  ],
  "dependencies": {
    "@package/latest": "*",
    "@package/version": "^1",
    "react": "^18",
    "react-dom": "^18",
  },
  "description": "MyDescription",
  "devDependencies": {
    "@devPackage/latest": "*",
    "@devPackage/version": "^2",
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
    "react-scripts": "^5",
  },
  "exports": "build/index.js",
  "files": [
    "build/*.js",
    "build/**/*.js",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-react-project",
  "peerDependencies": {
    "@peerPackage/latest": "*",
    "@peerPackage/version": "^3",
  },
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": {
    "a": "b",
  },
  "scripts": {
    "build": "npx react-scripts build",
    "start": "npx react-scripts start",
    "test": "./myTestScript.sh",
  },
  "types": undefined,
  "version": "0.0.1",
}
`;

exports[`ReactSupport creates a typescript react project 1`] = `
{
  "author": {
    "email": "test@example.com",
    "name": "Test Example",
    "organization": true,
    "url": undefined,
  },
  "bin": undefined,
  "browserslist": [
    ">0.2%",
    "not dead",
    "not op_mini all",
  ],
  "bugs": undefined,
  "bundledDependencies": [
    "@devPackage/latest",
  ],
  "dependencies": {
    "@package/latest": "*",
    "@package/version": "^1",
    "react": "^18",
    "react-dom": "^18",
  },
  "description": "MyDescription",
  "devDependencies": {
    "@devPackage/latest": "*",
    "@devPackage/version": "^2",
    "@stackgen/cli": "*",
    "@stackgen/core": "*",
    "@types/node": "*",
    "@types/react": "^18",
    "@types/react-dom": "^18",
    "react-scripts": "^5",
    "ts-node": "*",
    "typescript": "*",
  },
  "exports": "build/index.js",
  "files": [
    "build/*.js",
    "build/**/*.js",
    "build/*.d.ts",
    "build/**/*.d.ts",
  ],
  "homepath": undefined,
  "keywords": undefined,
  "main": "build/index.js",
  "man": undefined,
  "name": "my-react-project",
  "peerDependencies": {
    "@peerPackage/latest": "*",
    "@peerPackage/version": "^3",
  },
  "private": true,
  "repository": {
    "type": "git",
    "url": "http://localhost",
  },
  "resolutions": {
    "a": "b",
  },
  "scripts": {
    "build": "npx react-scripts build",
    "clean": "find . -name "*.js" -not -path "./node_modules/*" -not -name config-overrides.js -not -name setupProxy.js -delete && find . -name "*.d.ts" -not -path "./node_modules/*" -delete",
    "compile": "tsc -p ./tsconfig.json",
    "start": "npx react-scripts start",
    "test": "./myTestScript.sh",
  },
  "types": "build/index.d.ts",
  "version": "0.0.1",
}
`;
